--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,28 @@
 site_name: Моя Документация с Confluence
 docs_dir: docs
 
+theme:
+  name: material
+  language: ru
+  features:
+    - navigation.instant
+    - navigation.tracking
+    - navigation.tabs
+    - navigation.sections
+    - navigation.expand
+    - navigation.top
+    - search.suggest
+    - search.highlight
+    - content.code.copy
+
+plugins:
+  - search:
+      lang: ru
+  - awesome-pages
+
+markdown_extensions:
+  - admonition
+  - codehilite
+  - meta
+  - toc:
+      permalink: true
